# ScholarFLow

./: .dockerignore  .env.example  .gitignore  PROJECT_PLAN.md  README.md  README_CN.md  SCHOLARFLOW_CORE_REBUILD_PLAN_v2.md  SCHOLARFLOW_STATUS_AND_PLAN.md  SYSTEM_PROMPT.md  docker-compose.deploy.yml  docker-compose.yml
backend/: main.py  pyproject.toml
backend/agents/: analysis_agent.py  base.py  editor_agent.py  evidence_agent.py  fetcher_agent.py  main_agent.py  reader_agent.py  review_agent.py  sandbox_agent.py  search_agent.py  tutor_agent.py  writing_agent.py
backend/api/: analysis.py  auth.py  autoresearch.py  autoresearch_deployments.py  beta.py  chunks.py  drafts.py  editor.py  evidence.py  experiments.py  export.py  health.py  mentor.py  papers.py  progress.py  projects.py  research_harness.py  review.py  search.py  tasks.py  templates.py  tutor.py
backend/config/: db.py  deps.py  settings.py
backend/data/frozen_benchmarks/: scifact_claim_retrieval_frozen_snapshot_v1.json  scifact_claim_verification_frozen_snapshot_v1.json
backend/migrations/: env.py
backend/migrations/versions/: 0f4c6d2a9b11_audit_logs.py  1e8819fedd81_init.py  2ee40bacd748_chunks_and_evidence_chunk.py  3c6c4f5b9a2e_audit_event_metadata.py  (+9 more)
backend/models/: __init__.py  audit_log.py  chunk.py  draft.py  evidence.py  experiment_run.py  export_file.py  feedback_entry.py  mentor_feedback.py  paper.py  project.py  project_mentor_access.py  project_paper.py  review_report.py  search_result.py  task_run.py  template.py  usage_event.py  user.py
backend/schemas/: agents.py  analysis.py  auth.py  autoresearch.py  beta.py  chunks.py  common.py  drafts.py  editor.py  evidence.py  experiments.py  export.py  mentor.py  papers.py  projects.py  research_harness.py  review.py  search.py  templates.py  tutor.py
backend/scripts/: live_acceptance_run.py
backend/services/: tasks.py  workspace.py
backend/templates/: experiment_report.md  general_paper.md  literature_review.md  math_modeling.md
backend/tests/: glm_paper_smoke.py  test_audit_events.py  test_auth_session.py  test_autoresearch.py  test_autoresearch_regressions.py  test_beta_summary.py  test_e2e_pipeline.py  test_end_to_end_workflow.py  test_glm_paper.py  test_llm_client.py  test_project_progress.py  test_research_harness_auditor_marker_hygiene.py  test_research_harness_auditor_structured_claims.py  test_research_harness_auditor_value_anchoring.py  test_research_harness_autoresearch_compat.py  test_research_harness_citation.py  test_research_harness_cross_domain.py  test_research_harness_editable_paper.py  test_research_harness_honest_gate.py  test_research_harness_portfolio.py  test_research_harness_prompts.py  test_research_harness_publish.py  test_research_harness_scale.py  test_research_harness_writer_structured_claims.py  test_security.py  test_vector_index.py  test_workspace.py
(+300 files in other folders)
