[project]
name = "scholarflow-backend"
version = "0.1.0"
description = "ScholarFlow backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "python-docx>=1.1",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["alembic>=1.13"]
